Docs: record deep-weaving in CLAUDE.md + ghost-session trap in TESTING.md
- CLAUDE.md: decisions-log entry + Current-state bullet for the tiered
  enchanting system
- TESTING.md: the force-killed-client ghost session -> duplicate-login
  reconnect loop trap and its stack-restart fix

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>